<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginHorizontal="20sp"
    tools:context=".MaybeIncomeActivity">
    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textColor="@color/gray"
        android:textSize="45sp"
        android:text="@string/income"
        />

    <ImageView
        android:id="@+id/image"
        android:layout_width="285dp"
        android:layout_height="303dp"
        android:src="@drawable/lemonade"
        android:layout_gravity="center_horizontal"
        />

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/where_can_you_earn_some"
        android:textAlignment="center"
        android:textColor="@color/dark_green"
        android:textSize="30sp"
        android:layout_marginBottom="5sp"
        android:layout_gravity="center_horizontal"
        />

    <TextView
        android:id="@+id/text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/money_can_come_in_many_forms_the_most_common_are"
        android:textAlignment="center"
        android:textColor="@color/dark_green"
        android:textSize="30sp"
        android:layout_marginBottom="5sp"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:id="@+id/text3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tips_nemployment_nstarting_a_business"
        android:textAlignment="center"
        android:textColor="@color/dark_green"
        android:textSize="30sp"
        android:layout_marginBottom="15sp"
        android:layout_gravity="center_horizontal"
        />

    <Button
        android:id="@+id/finishButton"
        android:layout_width="match_parent"
        android:layout_height="45sp"
        android:text="@string/finish"
        android:maxHeight="40sp"
        android:textAppearance="@style/button_style"
        android:layout_marginHorizontal="20sp"
        android:backgroundTint="@drawable/continue_button"
        android:layout_marginBottom="20sp"/>
</LinearLayout>