<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IncomeScreenAgainActivity">
    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15sp"
        android:text="@string/income"
        android:textSize="45sp"
        android:layout_centerHorizontal="true"
        />
    <ImageView
        android:id="@+id/image"
        android:layout_width="wrap_content"
        android:layout_height="320sp"
        android:layout_marginHorizontal="40sp"
        android:layout_marginTop="20sp"
        android:src="@drawable/lemonade"
        android:layout_below="@id/title"/>

    <TextView
        android:id="@+id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/where_can_you_earn_some"
        android:layout_below="@id/image"
        android:textAlignment="center"
        android:layout_marginTop="10sp"
        android:layout_centerHorizontal="true"
        android:textSize="25sp"/>
    <TextView
        android:id="@+id/text2"
        android:layout_marginHorizontal="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/money_can_come_in_many_forms_the_most_common_are"
        android:layout_below="@id/text1"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"
        android:textSize="25sp"/>
    <TextView
        android:id="@+id/text3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:text="@string/tips_nemployment_nstarting_a_business"
        android:layout_below="@id/text2"
        android:textSize="25sp"/>

    <Button
        android:id="@+id/finishButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text3"
        android:backgroundTint="@color/light_yellow"
        android:textColor="@color/dark_green"
        android:layout_marginTop="15sp"
        android:layout_marginBottom="15sp"
        android:layout_marginHorizontal="30sp"
        android:layout_centerHorizontal="true"
        android:text="@string/finish" />

</RelativeLayout>