<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/InvertedColors_NoActionBar"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    tools:context=".budgetScreens.Screen1">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/verticalHalf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".5"/>
        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/budgeting"
            android:textSize="35sp"
            android:layout_marginTop="15sp"
            android:layout_gravity="center_horizontal"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/text1"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:text="@string/budget_1"
            android:layout_marginTop="30sp"
            android:textSize="20sp"
            android:layout_marginHorizontal="10sp"
            android:gravity="center_horizontal"
            app:layout_constraintStart_toStartOf="@id/verticalHalf"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title"/>

        <ImageView
            android:layout_width="0sp"
            android:layout_height="0sp"
            app:layout_constraintTop_toBottomOf="@id/title"
            app:layout_constraintBottom_toTopOf="@id/text2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/verticalHalf"
            android:src="@drawable/piggy_bank_with_money"
            />
        <TextView
            android:id="@+id/text2"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:text="@string/budget_2"
            android:textSize="20sp"
            android:layout_marginTop="30sp"
            android:layout_marginHorizontal="10sp"
            android:gravity="center_horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text1"
            app:layout_constraintEnd_toEndOf="@id/verticalHalf"/>

        <TextView
            android:id="@+id/text3"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:text="That's budgeting!"
            android:layout_marginBottom="15sp"
            android:textSize="30sp"
            android:gravity="center_horizontal"
            app:layout_constraintTop_toBottomOf="@id/house"
            app:layout_constraintStart_toStartOf="@id/verticalHalf"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/pictureGuide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.65"/>

        <ImageView
            android:id="@+id/house"
            android:layout_width="0sp"
            android:layout_height="0sp"
            android:layout_marginTop="20sp"
            app:layout_constraintTop_toBottomOf="@id/text1"
            app:layout_constraintBottom_toBottomOf="@id/pictureGuide"
            app:layout_constraintStart_toStartOf="@id/verticalHalf"
            app:layout_constraintEnd_toEndOf="parent"
            android:src="@drawable/house"/>

        <ImageView
            android:layout_width="0sp"
            android:layout_height="0sp"
            android:layout_marginTop="20sp"
            app:layout_constraintTop_toBottomOf="@id/text2"
            app:layout_constraintBottom_toBottomOf="@id/text3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="@id/verticalHalf"
            android:src="@drawable/toys"/>

        <ImageView
            android:layout_width="0sp"
            android:layout_height="0sp"
            android:layout_marginBottom="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text3"
            android:src="@drawable/arrow"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>